[gd_scene load_steps=4 format=3 uid="uid://ylggyhfgm3a7"]

[ext_resource type="Script" uid="uid://cw0esj2vtimj4" path="res://bird_flock.gd" id="1_gwamr"]
[ext_resource type="PackedScene" uid="uid://cyr701bbo8g0u" path="res://assets/bird.glb" id="1_ioyaa"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_gwamr"]
height = 20.0
radius = 3.5

[node name="BirdFlock" type="Node3D"]
script = ExtResource("1_gwamr")

[node name="TriggerArea" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="TriggerArea"]
shape = SubResource("CylinderShape3D_gwamr")

[node name="Birds" type="Node3D" parent="."]

[node name="Sketchfab_Scene" parent="Birds" instance=ExtResource("1_ioyaa")]

[connection signal="body_entered" from="TriggerArea" to="." method="_on_trigger_area_body_entered"]
[connection signal="body_exited" from="TriggerArea" to="." method="_on_trigger_area_body_exited"]
